# ABDCZ101

./: .gitignore  Bass.syx  CMakeLists.txt  CONTROL_FILESCODE202512151715.txt  CONTROL_FILESCODE202601161029.txt  CONTROL_FILESCODE202601171349.txt  CONTROL_FILESCODE202601181617.txt  GoldenMasterLog.txt  GoldenMasterOut_Phase2.txt  IMPROVEMENT_PLAN.md  README.md  STATUS.md  THIRD_PARTY.md  TOTALCODE202512151715.txt  TOTALCODE202512160014.txt  TOTALCODE202512160019.txt  TOTALCODE202512160052.txt  TOTALCODE202512160141.txt  TOTALCODE202512160823.txt  TOTALCODE202512160904.txt  TOTALCODE202512161007.txt  TOTALCODE202512161138.txt  TOTALCODE202512161301.txt  TOTALCODE202601161029.txt  TOTALCODE202601161123.txt  TOTALCODE202601171349.txt  TOTALCODE202601181617.txt  all_build_files.txt  best_practices.md  build.bat  build.ps1  build_clean.bat  build_custom.bat  build_gm.ps1  build_gm_direct.ps1  build_log.txt  build_log_final.txt  build_log_tail.txt  build_output.txt  build_standalone.ps1  (+8 more)
.github/workflows/: ci.yml
DOCS/: CHANGELOG.md  CZ 101 - ia.mht  CZ 101 - ia.rtf  CZ 101 - ia.txt  CZ-101 API & Sound Design.MD  CZ-101 Complete Implementation.MD  CZ-101 Emulator Complete Package (1).MD  CZ101-10-DETALLES-FINALES.md  CZ101-ANALISIS-CRITICO-QUE-FALTA.md  CZ101-CODIGO-REAL-ESPECIFICACIONES.md  CZ101-COMPARATIVA-REALVSESPECIFICACION.md  CZ101-DISENO-9-TEMAS.md  CZ101-FINAL-CHECKLIST.md  CZ101-PRESETS-VALIDACION-AUDIO.md  CZ101-RESUMEN-EJECUTIVO.md  CZ101-SPEC-HANDBOOK.md  CZ101-TEMAS-COMPLETADOS.md  midi.txt  quiero programar en JUCE un emulador del mítico ca.md
DOCS/Archive/: AUDIT_REPORT.md  COMPILATION_LOG.md  DEEP_DIVE_AUDIT.md  IMPROVEMENT_PLAN.md
DOCS/GEMINI/: 00_MASTER_PLAN.md  01_ARCHITECTURE.md  02_MILESTONES.md  03_DSP_SPECS.md  04_UI_DESIGN.md  05_TESTING.md  06_ADDITIONAL_NOTES.md  07_LESSONS_FROM_DEEPMIND.md  08_CODING_STANDARDS.md  99_Lessons_Learned.md  ARQUITECTURA_MODULAR.md  BUILD_GUIDE.md  CHANGELOG.md  COMPILATION_TROUBLESHOOTING.md  CZ101-ia-converted.md  EXECUTIVE_SUMMARY.md  FEATURE_MIDI_OUTPUT.md  FINAL_SESSION_SUMMARY.md  HISTORIAL_SESIONES.md  INDICE_DOCUMENTACION.md  MILESTONES_3_4_COMPLETE.md  MILESTONES_5_6_COMPLETE.md  MILESTONES_8_9_COMPLETE.md  MILESTONE_0_STATUS.md  MILESTONE_10_COMPLETE.md  MILESTONE_1_COMPLETE.md  MILESTONE_2_COMPLETE.md  MILESTONE_7_COMPLETE.md  POLYBLEP_RESEARCH.md  PROJECT_STATUS_15042025.md  QUICK_START.md  README.md  REUSABLE_LIBRARY_GUIDE.md  SESSION_14DIC_FINAL.md  SESSION_FINAL_COMPLETE.md  SESSION_SUMMARY.md  SYSTEM_CONFIG.md  TODO_15042025.md  ia_inicio.txt
DOCS/WORDS/: CZ 101 - ia.docx  CZ-101 API & Sound Design.docx  CZ-101 Complete Implementation.docx  CZ-101 Emulator Complete Package (1).docx  ~$ 101 - ia.docx
DOCS/auditoría 20250111/: CZ101_AUDIT_REPORT.docx  CZ101_AUDIT_REPORT.md  CZ101_AUDIT_REVISION_2.docx  CZ101_UI_UX_AUDIT_REPORT.docx
DOCS/banks/: prueba.json  prueba2.json
DOCS/info/: CZ101.sysex.txt  casio.CZ-101.txt  casio.CZ.VZ.txt  casio.CZ101.patches.txt
DOCS/mame/: cz101.htm.txt  cz101.json.txt  cz101.xml.txt
DOCS/md perplexity/calibrado/: calibrado-presets.md  codigo-ready-to-copy.md
DOCS/md perplexity/interface/: FINAL-STATUS-v0.9-rc3.md  PluginEditor_NEW.cpp  PluginEditor_NEW.h  UI-REDESIGN-v2.0.md  nuevo interface.md
DOCS/md perplexity/mejoras/: CZ101_Implementation_Report.md  CZ101_Improvements_Proposed.md  CZ101_QuickFix_Guide.md  CZ101_Testing_Guide.md  Refactoring_Modularity_Strategy.md  codigo-mejorado-v2.md
DOCS/md perplexity/mejoras 2/: Nuevo Documento de texto.txt
DOCS/patches/: CZ-ALL.txt  CZ.sysex.txt  Casio CZ MIDI_SYSEX.html  czedit.txt  czlibrarian3.0.cpt.hqx  czphonix.zoo
DOCS/patches/CZ.PAT/: 1.OCT  2.OCT  747.LAN  8NOTE.PIA  8NOTE.POL  96.TEA  AAAHO  ACOUSTIC.PIA  ART.OF  BACKGROU.SWE  BELL.ORG  BIRDCALL.1  BIRDCALL.2  BOWP.IND  BOWR.BAS  BRASS.STR  BRASS1  BRIGHT.ELE  BUSHY  BUZZING.FLY  CHAIN.GAN  CHIFF.STR  CHORAL  CHORAL.OOH  CHUNKY.BLO  CLAP.PLU  COOLSTRI  CRAZY  DISTORTO.SWE  DIVA.HAR  DRILL  DRILLING  DROPPED.BOM  DRUM.HIT  DRUM.WAS  ECHO.LEA  ELECTRIC.BUB  ELECTRIC.PIA  FAT.BAS  FAT.DIS  (+91 more)
DOCS/patches/Casio CZ MIDI_SYSEX_files/: _main.css
DOCS/patches/cz-pack-1/: Afterxylo.syx  Digital Noise Organ.syx  Drum Bass.syx  Drunk Trumpet.syx  Fairy Fly.syx  Intense Feeling.syx  Laser Sus Pad.syx  Noisy Punch Bass.syx  Snake Pad.syx  Yay Afterhit.syx
Scripts/: bundle_code.ps1  generate_factory_header.py  manage.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: AudioThreadSnapshot.h  AuthenticHardware.h  BuildVersion.h  CZ5000VoiceStrategy.h  HardwareConstants.h  Voice.cpp  Voice.h  VoiceAssignmentStrategy.h  VoiceManager.cpp  VoiceManager.h
Source/DSP/: Arpeggiator.h  VelocitySensitivityCurves.h
Source/DSP/Effects/: BBDChorus.h  Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  DriveEffect.cpp  Reverb.h  (+7 more)
Source/MIDI/: MIDIProcessor.cpp  MIDIProcessor.h  SysExManager.cpp  SysExManager.h
Source/Standalone/: StandaloneApp.cpp
Source/State/: EnvelopeSerializer.cpp  EnvelopeSerializer.h  FactoryPresets.h  ParameterIDs.h  Parameters.cpp  Parameters.h  PresetManager.cpp  PresetManager.h  PresetRandomizer.h
Source/Tests/: GoldenMasterMain.cpp  SysExTestMain.cpp
Source/UI/: CZ101LookAndFeel.cpp  CZ101LookAndFeel.h  DesignTokens.h  LCDDisplay.cpp  LCDDisplay.h  LCDStateManager.cpp  LCDStateManager.h  ScaledComponent.h  SkinManager.h  UIManager.cpp  UIManager.h
Source/Utils/: CircularBuffer.h  DSPHelpers.h  PerformanceMonitor.cpp  PerformanceMonitor.h  SmoothedValue.h  StringHelpers.h
bundle_code/: CONTROL_FILESCODE202512160927.txt  CONTROL_FILESCODE202601112129.txt  CONTROL_FILESCODE202601121130.txt  CONTROL_FILESCODE202601131336.txt  CONTROL_FILESCODE202601151725.txt  TOTALCODE202512160720.txt  TOTALCODE202512160927.txt  TOTALCODE202512160944.txt  TOTALCODE202512161150.txt  TOTALCODE202512161210.txt  TOTALCODE202512161247.txt  TOTALCODE202601112054.txt  TOTALCODE202601112129.txt  TOTALCODE202601120055.txt  TOTALCODE202601121130.txt  TOTALCODE202601121300.txt  TOTALCODE202601131336.txt  TOTALCODE202601151725.txt
(+256 files in other folders)
